@@ -50,4 +50,5 @@ TODO: fadvise request
         - use libecb, and apply lots of minor space optimisations.
         - disable sendfile on darwin, broken as everything else.
         - add realpath request and implementation.
+	- cancelled requests will still invoke their request callbacks.
 
